fixed showcase images and swiper overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -463,7 +463,11 @@ a {
 .work-box:hover img {
     transform: scale(1.3);
 }
+.project-expand{
+    cursor:pointer;
+}
 .work-img {
+    max-height: 200px !important;
     display: block;
     overflow: hidden;
 }
@@ -540,6 +544,9 @@ a {
 }
 .portfolio-details .portfolio-description p {
     padding: 0;
+}
+.swiper-container {
+    overflow: hidden;
 }
 .swiper-pagination {
     margin-top: 20px;
